# drone-vis

./: .coverage  .coveragerc  .gitignore  .pylintrc  .readthedocs.yml  Dockerfile  LICENCE  LICENSE  MANIFEST.in  README.md  dronevis-features.md  dronevis_report.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py  test_video.avi
.github/: pull_request_template.md
.github/workflows/: build.yml  codecov.yml  dockerhub.yml  style.yml  test.yml  test_pr.yml
deb_dist/: dronevis_1.0.0-1.debian.tar.xz  dronevis_1.0.0-1.dsc  dronevis_1.0.0-1_source.buildinfo  dronevis_1.0.0-1_source.changes
deb_dist/dronevis-1.0.0/: PKG-INFO  pyproject.toml  requirements.txt
deb_dist/dronevis-1.0.0/debian/: changelog  control  rules
debian/: README.Debian  README.source  changelog  control  copyright  dronevis.cron.d.ex  dronevis.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
docker/: Dockerfile
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/action_recognition/: action_recognition_models.rst  times_transformer.rst  video_masked_transformer.rst  video_vision_transformer.rst
docs/source/connection/: command.rst  drone.rst  drone_connection.rst  video.rst
docs/source/crowd_counting/: mtl_counting.rst
docs/source/detection/: ssd.rst  (+4 more)
examples/: action_recognition_with_webcam.py  crowdcounting_with_webcam.py  depth_estimation_with_transformers.py  detect_with_yolov8.py  detection_with_img.py  detection_with_webcam.py  drone_cam_detection.py  face_detect_with_webcam.py  gesture_recognition_with_webcam.py  lane_detection_with_webcam.py  pose_with_webcam.py  pose_with_yolov8.py  road_segmentation_with_webcam.py  segment_with_yolov8.py  tracking_with_video.py  tracking_with_webcam.py  tracking_with_yolov8.py  webcam_gluoncv.py
mocks/: test_week.py  weekday.py
notes/: Notes.md
scripts/: generate_docs.sh  linters_parser.py
src/: requirements.txt
src/dronevis/: __init__.py  __main__.py  main_gui.py
src/droney/: main.py
test_data/: test_video.avi
tests/: conftest.py
tests/abstract/: test_abstract_gluoncv.py  test_abstract_torch.py  test_base_drone.py  test_base_video_thread.py  test_noop_model.py
tests/drone_connect/: test_command.py  test_demo_drone.py  test_navdata_decode.py
tests/models/: test_action_recognition.py  test_cnn_face_detection.py  test_crowd_count.py  test_depth_estimation.py  test_dnn_face_detection.py  test_face_detection_model.py  test_fasterrcnn_model.py  test_gesture_recognition.py  test_haar_face_detection.py  test_hog_face_detection.py  test_lane_detection.py  test_mediapipe_pose.py  test_model_factory.py  test_pose.py  test_road_segmentation.py  test_ssd_model.py  test_yolov5.py  test_yolov8.py
tests/pose/: test_pose.py
tests/scripts/: test_main.py  test_main_gui.py
tests/ui/: test_drone_cli.py  test_gesture_recognition_thread.py  test_gui_components.py
tests/utils/: test_control_utils.py  test_general.py
(+125 files in other folders)
