[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dronevis"
version = "1.3.0"
description = "Full compatible drone library to automate computer vision algorithms on parrot drones."
readme = "README.md"
authors = [{ name = "Ahmed Heakl", email = "ahmed.heakl@ejust.edu.eg" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"
keywords = ["drone", "computer vision", "human tracking", "object recognition",
            "YOLO", "human counting", "face detection", "mediapipe", "pytorch",
            "sockets", "thread"]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


    [project.optional-dependencies]
    build = ["build", "twine"]
    dev   = ["black", "bumpver"]

    [project.scripts]
    dronevis = "dronevis.__main__:main"
    dronevis-gui = "dronevis.main_gui:main"

    [project.urls]
    repository = "https://github.com/ahmedheakl/drone-vis"


[tool.bumpver]
current_version = "1.3.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "bump version {old_version} -> {new_version}"

    [tool.bumpver.file_patterns]
    "pyproject.toml" = [
        'current_version = "{version}"',
        'version = "{version}"',
    ]
    "docs/source/conf.py" = ['release = "{version}"']
    "src/dronevis/__init__.py" = ["{version}"]
    "src/dronevis/__main__.py" = ["- dronevis v{version}"]